...
import java.util.TimeZone

private enum class DialogState {
    INITIAL, DOWNLOADING, COMPLETE, FAILED
}

internal const val UPDATE_DIALOG_CONTENT_TAG = "update_dialog_content"

@Composable
fun UpdateDialog(
    release: GitHubRelease,
    currentVersion: String,
    onDismiss: () -> Unit,
...
